data/derived/sp14/progs/unify/prog2652.ml.out
Characters 112-136:
  | h :: t -> bigAdd( (mulByDigit h l'), l') in
                    ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
